--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="URF-8"/>
+        <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scake=1.0"/>
         <meta name="description" content="Coffee Shop Landing Page" />
         <meta name="author" content="Jordan Reyes"/>
         <meta name="keywords" content="HTML,CSS" />
         <link rel="stylesheet" href="./pages/index.css" />
         <link rel="stylesheet" href="vendor/normalize.css"/>
-        <link rel="preconnect" href="http://fonts.googleapis.com"/>
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?famil=Inter:wght100..900$family=Noto+Serif:ital,wght@0,100..900;1,100&display=swap"/>
-        <link rel="icon" href="Favicon.ico" type="image/x-icon">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>/
+        <link href="https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+        <link rel="icon" href="favicon.ico" type="image/x-icon">
         <title>Coffee Shop</title>
     </head>
     <body>
