New update for my project

--- a/index.html
+++ b/index.html
@@ -9,14 +9,16 @@
         <link rel="stylesheet" href="./pages/index.css" />
         <link rel="stylesheet" href="vendor/normalize.css"/>
         <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>/
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
         <link rel="icon" href="favicon.ico" type="image/x-icon">
         <title>Coffee Shop</title>
     </head>
     <body>
         <div class="page">
-            <header class="header"><p>Testing</p></header>
+            <header class="header">
+                <p>TESTING</p>
+            </header>
             <main class="content">
                 <section class="recipies"></section>
                 <section class="reservation"></section>
