--- a/index.html
+++ b/index.html
@@ -17,10 +17,42 @@
     <body>
         <div class="page">
             <header class="header">
-                <p>TESTING</p>
+                <nav class="nav">
+                    <img src="./images/logo_coffeeshop_dark.svg" alt="Coffeeshop logo" class="nav__logo">
+                    <ul class="nav__links">
+                        <li><a href="#Recipes" class="nav__link">Recipes</a></li>
+                        <li><a href="" class="nav__link">Book a table</a></li>
+                        <li><a href="" class="nav__link">Menu</a></li>
+                        <li><a href="" class="nav__link">Contacts</a></li>
+                    </ul>
+                </nav>
+                <h1 class="header__title"><span class="header__span-accent">Specialty coffee</span> in the Triple Peaks Library</h1>
+                <p class="header__description">Welcome to out study zone! We've got the coffee to energize you and the cozy vibes to help you get creative.</p>
+                <img src="./images/inside_coffee_shop.png" alt="Coffeeshop" class="header__image">
+                <div class="header__footer">
+                    <div>
+                        <p class="header__paragraph">Hours</p>
+                        <p class="header__paragraph">Monday - Friday (10:00 - 19:00)</p>
+                        <p class="header__paragraph">Saturday - Sunday (11:00 - 1800)</p>
+                    </div>
+                    <p class="header__paragraph">200 Success Avenue, The Town of Triple Peaks</p>
+                </div>
             </header>
             <main class="content">
-                <section class="recipies"></section>
+                <section class="recipes" id="Recipes">
+                    <h2 class="recipes__title">Recipes</h2>
+                    <p class="recipes__subtitle">Check out some recipes we've collected for your home-brewing convenience:</p>
+                    <div class="recipes__videos">
+                        <div>
+                            <iframe src="https://youtu.be/j6VlT_jUVPc?si=kYR40AMAuH0iQWPW" frameborder="0" class="recipes__iframe"></iframe>
+                            <p class="recipes__video-caption"><span>Areopress recipe</span> ~5 min</p>
+                        </div>
+                        <div>
+                            <iframe src="https://youtu.be/st571DYYTR8?si=Bzg-9_-AuFjLhbQt" frameborder="0" class="recipes__iframe"></iframe>
+                            <p class="recipes__video-caption"><span>French press recipe</span> ~15 min</p>
+                        </div>
+                    </div>
+                </section>
                 <section class="reservation"></section>
                 <section class="menu"></section>
                 <section class="about"></section>
