--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
                     <p class="recipes__subtitle">Check out some recipes we've collected for your home-brewing convenience:</p>
                     <div class="recipes__videos">
                         <div>
-                            <iframe src="https://youtu.be/j6VlT_jUVPc?si=kYR40AMAuH0iQWPW" frameborder="0" class="recipes__iframe"></iframe>
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/j6VlT_jUVPc?si=xVTgHpS02NfgqAj6" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                             <p class="recipes__video-caption"><span>Areopress recipe</span> ~5 min</p>
                         </div>
                         <div>
-                            <iframe src="https://youtu.be/st571DYYTR8?si=Bzg-9_-AuFjLhbQt" frameborder="0" class="recipes__iframe"></iframe>
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/st571DYYTR8?si=yPqMJP8JSosNW8Do" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                             <p class="recipes__video-caption"><span>French press recipe</span> ~15 min</p>
                         </div>
                     </div>
