--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <meta name="description" content="Coffee Shop Landing Page" />
         <meta name="author" content="Jordan Reyes"/>
-        <meta name="keywords" content="HTML,CSS" />
+        <meta name="keywords" content="html, css" />
         <link rel="stylesheet" href="./pages/index.css" />
         <link rel="stylesheet" href="vendor/normalize.css"/>
         <link rel="preconnect" href="https://fonts.googleapis.com">
