--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <nav class="nav">
                     <img src="./images/logo_coffeeshop_dark.svg" alt="Coffeeshop logo" class="nav__logo">
                     <ul class="nav__links">
-                        <li><a href="#Recipes" class="nav__link">Recipes</a></li>
+                        <li><a href="#recipes" class="nav__link">Recipes</a></li>
                         <li><a href="#about" class="nav__link">Book a table</a></li>
                         <li><a href="#menu" class="nav__link">Menu</a></li>
                         <li><a href="#contacts" class="nav__link">Contacts</a></li>
@@ -39,7 +39,7 @@
                 </div>
             </header>
             <main class="content">
-                <section class="recipes" id="Recipes">
+                <section class="recipes" id="recipes">
                     <h2 class="recipes__title">Recipes</h2>
                     <p class="recipes__subtitle">Check out some recipes we've collected for your home-brewing convenience:</p>
                     <div class="recipes__videos">
@@ -53,11 +53,11 @@
                         </div>
                     </div>
                 </section>
-                <section class="reservation"></section>
-                <section class="menu"></section>
-                <section class="about"></section>
+                <section class="reservation" ></section>
+                <section class="menu" id="menu"></section>
+                <section class="about" id="about"></section>
             </main>
-            <footer class="footer"></footer>
+            <footer class="footer" id="contacts"></footer>
         </div>
     </body>
 </html>
