--- a/index.html
+++ b/index.html
@@ -53,7 +53,33 @@
                         </div>
                     </div>
                 </section>
-                <section class="reservation" ></section>
+                <section class="reservation">
+                    <h2 class="reservation__title">Book a table</h2>
+                    <form action="" class="reservation__form form">
+                        <fieldset class="form__fieldset">
+                            <label for="" class="form__label">
+                                Name *
+                                <input type="text" class="form__input">
+                            </label>
+                            <label for="" class="form__label">
+                                Number of guests *
+                                <input type="number" class="form__input">
+                            </label>
+                        <label for="" class="form__label">
+                            Date & time *
+                            <input type="datetime-local" class="form__input">
+                        </label>
+                        <label for="" class="form__label">
+                            Your email *
+                            <input type="email" class="form__input">
+                        </label>
+                        <button type="submit" class="form__button">Book a table</button>
+                        <label for="checkbox" class="form__label">
+                            <input type="checkbox" class="form__checkbox">
+                            I agree with the terms of use</label>
+                        </fieldset>
+                    </form>
+                </section>
                 <section class="menu" id="menu"></section>
                 <section class="about" id="about"></section>
             </main>
