--- a/index.html
+++ b/index.html
@@ -57,24 +57,24 @@
                     <h2 class="reservation__title">Book a table</h2>
                     <form action="" class="reservation__form form">
                         <fieldset class="form__fieldset">
-                            <label for="" class="form__label">
+                            <label for="Name" class="form__label">
                                 Name *
                                 <input type="text" class="form__input">
                             </label>
-                            <label for="" class="form__label">
+                            <label for="Number" class="form__label">
                                 Number of guests *
                                 <input type="number" class="form__input">
                             </label>
-                        <label for="" class="form__label">
+                        <label for="Date & time" class="form__label">
                             Date & time *
                             <input type="datetime-local" class="form__input">
                         </label>
-                        <label for="" class="form__label">
+                        <label for="email" class="form__label">
                             Your email *
-                            <input type="email" class="form__input">
+                            <input type="email" class="form__input email">
                         </label>
                         <button type="submit" class="form__button">Book a table</button>
-                        <label for="checkbox" class="form__label">
+                        <label for="form__checkbox" class="form__label">
                             <input type="checkbox" class="form__checkbox">
                             I agree with the terms of use</label>
                         </fieldset>
