--- a/index.html
+++ b/index.html
@@ -55,19 +55,19 @@
                 </section>
                 <section class="reservation">
                     <h2 class="reservation__title">Book a table</h2>
-                    <form action="" class="reservation__form form">
+                    <form action="book a table" class="reservation__form form">
                         <fieldset class="form__fieldset">
                             <label for="Name" class="form__label">
                                 Name *
                                 <input type="text" class="form__input">
                             </label>
-                            <label for="Number" class="form__label">
+                            <label for="number" class="form__label">
                                 Number of guests *
                                 <input type="number" class="form__input">
                             </label>
-                        <label for="Date & time" class="form__label">
+                        <label for="datetime" class="form__label">
                             Date & time *
-                            <input type="datetime-local" class="form__input">
+                            <input type="datetime-local" class="form__input datetime">
                         </label>
                         <label for="email" class="form__label">
                             Your email *
