New update for my project

--- a/index.html
+++ b/index.html
@@ -55,23 +55,23 @@
                 </section>
                 <section class="reservation">
                     <h2 class="reservation__title">Book a table</h2>
-                    <form action="book a table" class="reservation__form form">
+                    <form action="form" class="reservation__form">
                         <fieldset class="form__fieldset">
-                            <label for="Name" class="form__label">
+                            <label for="form__name" class="form__label">
                                 Name *
-                                <input type="text" class="form__input">
+                                <input type="text" class="form__input Form__name">
                             </label>
-                            <label for="number" class="form__label">
+                            <label for="form__number" class="form__label">
                                 Number of guests *
-                                <input type="number" class="form__input">
+                                <input type="number" class="form__input form__number">
                             </label>
-                        <label for="datetime" class="form__label">
+                        <label for="form__datetime" class="form__label">
                             Date & time *
-                            <input type="datetime-local" class="form__input datetime">
+                            <input type="datetime-local" class="form__input form__datetime">
                         </label>
-                        <label for="email" class="form__label">
+                        <label for="form__email" class="form__label">
                             Your email *
-                            <input type="email" class="form__input email">
+                            <input type="email" class="form__input form__email">
                         </label>
                         <button type="submit" class="form__button">Book a table</button>
                         <label for="form__checkbox" class="form__label">
