--- a/index.html
+++ b/index.html
@@ -57,21 +57,21 @@
                     <h2 class="reservation__title">Book a table</h2>
                     <form action="form" class="reservation__form">
                         <fieldset class="form__fieldset">
-                            <label for="form__name" class="form__label">
+                            <label for="name" class="form__label">
                                 Name *
-                                <input type="text" class="form__input Form__name">
+                                <input type="text" id="name" class="form__input">
                             </label>
-                            <label for="form__number" class="form__label">
+                            <label for="number" class="form__label">
                                 Number of guests *
-                                <input type="number" class="form__input form__number">
+                                <input type="number" id="number" class="form__input">
                             </label>
-                        <label for="form__datetime" class="form__label">
+                        <label for="datetime" class="form__label">
                             Date & time *
-                            <input type="datetime-local" class="form__input form__datetime">
+                            <input type="datetime-local" id="datetime" class="form__input">
                         </label>
-                        <label for="form__email" class="form__label">
+                        <label for="email" class="form__label">
                             Your email *
-                            <input type="email" class="form__input form__email">
+                            <input type="email" id="email" class="form__input">
                         </label>
                         <button type="submit" class="form__button">Book a table</button>
                         <label for="form__checkbox" class="form__label">
