--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                             <input type="email" id="email" class="form__input">
                         </label>
                         <button type="submit" class="form__button">Book a table</button>
-                        <label for="form__checkbox" class="form__label">
+                        <label for="form__checkbox" class="form__label form__label_type_checkbox">
                             <input type="checkbox" class="form__checkbox">
                             I agree with the terms of use</label>
                         </fieldset>
