--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                         </label>
                         <button type="submit" class="form__button">Book a table</button>
                         <label for="form__checkbox" class="form__label form__label_type_checkbox">
-                            <input type="checkbox" class="form__checkbox">
+                            <input type="checkbox" id="form__checkbox" class="form__checkbox">
                             I agree with the terms of use</label>
                         </fieldset>
                     </form>
