New update for my project

--- a/index.html
+++ b/index.html
@@ -59,23 +59,23 @@
                         <fieldset class="form__fieldset">
                             <label for="name" class="form__label">
                                 Name *
-                                <input type="text" id="name" class="form__input">
+                                <input type="text" id="name" class="form__label-form__input">
                             </label>
                             <label for="number" class="form__label">
                                 Number of guests *
-                                <input type="number" id="number" class="form__input">
+                                <input type="number" id="number" class="form__label-form__input">
                             </label>
                         <label for="datetime" class="form__label">
                             Date & time *
-                            <input type="datetime-local" id="datetime" class="form__input">
+                            <input type="datetime-local" id="datetime" class="form__label-form__input">
                         </label>
                         <label for="email" class="form__label">
                             Your email *
-                            <input type="email" id="email" class="form__input">
+                            <input type="email" id="email" class="form__label-form__input">
                         </label>
-                        <button type="submit" class="form__button">Book a table</button>
+                        <button type="submit" class="form__fieldset-form__button">Book a table</button>
                         <label for="form__checkbox" class="form__label form__label_type_checkbox">
-                            <input type="checkbox" id="form__checkbox" class="form__checkbox">
+                            <input type="checkbox" id="form__checkbox" class="form__label-form__checkbox">
                             I agree with the terms of use</label>
                         </fieldset>
                     </form>
