--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <section class="reservation">
                     <h2 class="reservation__title">Book a table</h2>
                     <form action="form" class="reservation__form">
-                        <fieldset class="form__fieldset">
+                        <fieldset class="reservation__form form__fieldset">
                             <label for="name" class="form__fieldset form__label">
                                 Name *
                                 <input type="text" id="name" class="form__label form__input">
