--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
                 <section class="reservation">
                     <h2 class="reservation__title">Book a table</h2>
                     <form action="form" class="reservation__form">
-                        <fieldset class="reservation__form form__fieldset">
-                            <label for="name" class="reservation__form-fieldset form__label">
+                        <fieldset class="form__fieldset">
+                            <label for="name" class="form__label">
                                 Name *
-                                <input type="text" id="name" class=" form__label form__input">
+                                <input type="text" id="name" class="form__input">
                             </label>
                             <label for="number" class="form__label">
                                 Number of guests *
