New update for my project

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 </section>
                 <section class="reservation">
                     <h2 class="reservation__title">Book a table</h2>
-                    <form action="form" class="reservation__form">
+                    <form action="form" class="form">
                         <fieldset class="form__fieldset">
                             <label for="name" class="form__label">
                                 Name *
@@ -73,7 +73,7 @@
                             Your email *
                             <input type="email" id="email" class="form__input">
                         </label>
-                        <button type="submit" class=" form__button">Book a table</button>
+                        <button type="submit" class="form__button">Book a table</button>
                         <label for="form__checkbox" class="form__label form__label_type_checkbox">
                             <input type="checkbox" id="form__checkbox" class="form__label form__checkbox">
                             I agree with the terms of use</label>
