--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 </section>
                 <section class="reservation">
                     <h2 class="reservation__title">Book a table</h2>
-                    <form action="form" class="form">
+                    <form action="form" class="reservation__form form">
                         <fieldset class="form__fieldset">
                             <label for="name" class="form__label">
                                 Name *
