New update for my project

--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@
                         <button type="submit" class="form__button">Book a table</button>
                         <label for="form__checkbox" class="form__label form__label_type_checkbox">
                             <input type="checkbox" id="form__checkbox" class="form__label form__checkbox">
-                            I agree with the terms of use</label>
+                            I agree with the terms of use
+                        </label>
                         </fieldset>
                     </form>
                 </section>
