--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="author" content="Jordan Reyes"/>
         <meta name="keywords" content="html, css" />
         <link rel="stylesheet" href="./pages/index.css" />
-        <link rel="stylesheet" href="vendor/normalize.css"/>
+        <link rel="stylesheet" href="./vendor/normalize.css"/>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
@@ -44,11 +44,11 @@
                     <p class="recipes__subtitle">Check out some recipes we've collected for your home-brewing convenience:</p>
                     <div class="recipes__videos">
                         <div>
-                            <iframe class="recipes__iframe" width="560" height="315" src="https://www.youtube.com/embed/j6VlT_jUVPc?si=xVTgHpS02NfgqAj6" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                            <iframe class="recipes__iframe" src="https://www.youtube.com/embed/j6VlT_jUVPc?si=xVTgHpS02NfgqAj6" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                             <p class="recipes__video-caption"><span>Areopress recipe</span> ~5 min</p>
                         </div>
                         <div>
-                            <iframe class="recipes__iframe" width="560" height="315" src="https://www.youtube.com/embed/st571DYYTR8?si=yPqMJP8JSosNW8Do" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                            <iframe class="recipes__iframe" src="https://www.youtube.com/embed/st571DYYTR8?si=yPqMJP8JSosNW8Do" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                             <p class="recipes__video-caption"><span>French press recipe</span> ~15 min</p>
                         </div>
                     </div>
@@ -59,23 +59,23 @@
                         <fieldset class="form__fieldset">
                             <label for="name" class="form__label">
                                 Name *
-                                <input type="text" id="name" class="form__input">
+                                <input type="text" id="name" class="form__input" placeholder="required">
                             </label>
                             <label for="number" class="form__label">
                                 Number of guests *
-                                <input type="number" id="number" class="form__input">
+                                <input type="number" id="number" class="form__input" placeholder="required">
                             </label>
                         <label for="datetime" class="form__label">
                             Date & time *
-                            <input type="datetime-local" id="datetime" class="form__input">
+                            <input type="datetime-local" id="datetime" class="form__input" placeholder="required">
                         </label>
                         <label for="email" class="form__label">
                             Your email *
-                            <input type="email" id="email" class="form__input">
+                            <input type="email" id="email" class="form__input" placeholder="required">
                         </label>
                         <button type="submit" class="form__button">Book a table</button>
                         <label for="form__checkbox" class="form__label form__label_type_checkbox">
-                            <input type="checkbox" id="form__checkbox" class="form__label form__checkbox">
+                            <input type="checkbox" id="form__checkbox" class="form__checkbox">
                             I agree with the terms of use
                         </label>
                         </fieldset>
@@ -138,7 +138,7 @@
                 <div class="footer__content">
                     <img src="./images/logo_coffeeshop_light.svg" alt="footer logo" class="footer__logo">
                     <div class="footer__column">
-                        <p class="footer__social-heading">Social media</p>
+                        <h2 class="footer__social-heading">Social media</h2>
                         <ul class="footer__list">
                             <li class="footer__list-item">
                                 <a href="#" class="footer__social-link">
