New update for my project

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
         <meta name="author" content="Jordan Reyes"/>
         <meta name="keywords" content="html, css" />
         <link rel="stylesheet" href="./pages/index.css" />
-        <link rel="stylesheet" href="./vendor/normalize.css"/>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
@@ -59,19 +58,19 @@
                         <fieldset class="form__fieldset">
                             <label for="name" class="form__label">
                                 Name *
-                                <input type="text" id="name" class="form__input" placeholder="required">
+                                <input type="text" id="name" class="form__input" required>
                             </label>
                             <label for="number" class="form__label">
                                 Number of guests *
-                                <input type="number" id="number" class="form__input" placeholder="required">
+                                <input type="number" id="number" class="form__input" required>
                             </label>
                         <label for="datetime" class="form__label">
                             Date & time *
-                            <input type="datetime-local" id="datetime" class="form__input" placeholder="required">
+                            <input type="datetime-local" id="datetime" class="form__input" required>
                         </label>
                         <label for="email" class="form__label">
                             Your email *
-                            <input type="email" id="email" class="form__input" placeholder="required">
+                            <input type="email" id="email" class="form__input" required>
                         </label>
                         <button type="submit" class="form__button">Book a table</button>
                         <label for="form__checkbox" class="form__label form__label_type_checkbox">
